--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -33,4 +33,9 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	padding: 2rem 2rem 0;
+
+	@include mq(768px) {
+
+		padding: 2rem 5rem 0;
+	}
 }
