--- a/scss/base/_global-selectors.scss
+++ b/scss/base/_global-selectors.scss
@@ -16,6 +16,11 @@
 			border-right: 1rem solid var(--secondary-clr);
 			padding: 1.5rem;
 		}
+
+		@include mq(768px) {
+			border-right: 0.5rem solid var(--secondary-clr);
+			padding: 1.5rem 1rem;
+		}
 	}
 
 	&--green-border-left {
@@ -28,6 +33,11 @@
 		@include mq(576px) {
 			border-left: 1rem solid var(--secondary-clr);
 			padding: 1.5rem;
+		}
+
+		@include mq(768px) {
+			border-left: 0.5rem solid var(--secondary-clr);
+			padding: 1.5rem 1rem;
 		}
 	}
 }
@@ -44,6 +54,10 @@
 		margin: 2rem 0;
 	}
 
+	@include mq(768px) {
+		grid-column: 1 / -1;
+	}
+
 	&__text {
 		color: var(--secondary-clr);
 		font-size: 3rem;
@@ -54,6 +68,10 @@
 
 		@include mq(576px) {
 			font-size: 4.5rem;
+		}
+
+		@include mq(768px) {
+			font-size: 6rem;
 		}
 	}
 
@@ -66,6 +84,10 @@
 		@include mq(576px) {
 			font-size: 5.5rem;
 		}
+
+		@include mq(768px) {
+			font-size: 7rem;
+		}
 	}
 }
 
@@ -76,6 +98,11 @@
 	@include mq(576px) {
 		@include date(2.1rem);
 		margin: 0 0 1.5rem 0;
+	}
+
+	@include mq(768px) {
+		@include date(1.7rem);
+		margin: 0 0 1rem 0;
 	}
 }
 
@@ -89,6 +116,11 @@
 	@include mq(576px) {
 		font-size: 2.1rem;
 		line-height: 2.6rem;
+	}
+
+	@include mq(768px) {
+		font-size: 1.8rem;
+		line-height: 2.2rem;
 	}
 
 	strong {
@@ -105,6 +137,12 @@
 			line-height: 2.6rem;
 			margin: 0 0 1.5rem 0;
 		}
+
+		@include mq(768px) {
+			@include description--green(1.8rem);
+			line-height: 2.2rem;
+			margin: 0 0 1rem 0;
+		}
 	}
 }
 
@@ -118,6 +156,11 @@
 	@include mq(576px) {
 		font-size: 2.1rem;
 		line-height: 2.6rem;
+	}
+
+	@include mq(768px) {
+		font-size: 1.8rem;
+		line-height: 2.2rem;
 	}
 }
 
@@ -141,7 +184,7 @@
 		top: -0.75rem;
 		transition: transform 1s linear;
 		width: 1.5rem;
-		
+
 		@include mq(576px) {
 			top: -1rem;
 			height: 2rem;
