--- a/scss/sections/aboutme/_work.scss
+++ b/scss/sections/aboutme/_work.scss
@@ -4,4 +4,11 @@
 	@include mq(576px) {
 		width: 40rem;
 	}
+
+	@include mq(768px) {
+		display: grid;
+		grid-column-gap: 4rem;
+		grid-template-columns: repeat(2, 1fr);
+		width: 100%;
+	}
 }
