--- a/scss/base/_global-selectors.scss
+++ b/scss/base/_global-selectors.scss
@@ -56,6 +56,7 @@
 
 	@include mq(768px) {
 		grid-column: 1 / -1;
+		line-height: 1;
 	}
 
 	&__text {
@@ -167,6 +168,10 @@
 .bar-wrapper {
 	&:not(:last-child) {
 		margin-bottom: 3rem;
+
+		@include mq(768px) {
+			margin-bottom: 5rem;
+		}
 	}
 }
 
@@ -174,6 +179,10 @@
 	background-color: var(--primary-clr);
 	height: 0.1rem;
 	position: relative;
+
+	@include mq(768px) {
+		height: 0.3rem;
+	}
 
 	&__ball {
 		background-color: var(--primary-clr);
@@ -186,10 +195,25 @@
 		width: 1.5rem;
 
 		@include mq(576px) {
-			top: -1rem;
 			height: 2rem;
+			top: -1rem;
 			width: 2rem;
 		}
+
+		@include mq(768px) {
+			border: 0.5rem solid var(--secondary-clr);
+			height: 4rem;
+			top: -2rem;
+			width: 4rem;
+		}
+	}
+}
+
+.youtube {
+	width: 100%;
+
+	@include mq(768px) {
+		grid-column: 1 / -1;
 	}
 }
 
