--- a/scss/sections/aboutme/_courses.scss
+++ b/scss/sections/aboutme/_courses.scss
@@ -6,9 +6,27 @@
 		width: 40rem;
 	}
 
+	@include mq(768px) {
+		display: grid;
+		grid-column-gap: 4rem;
+		grid-template-columns: repeat(2, 1fr);
+		width: 100%;
+	}
+
 	.gray-box {
 		@include mq(576px) {
 			padding: 2rem 3.5rem;
+		}
+
+		@include mq(768px) {
+			grid-column: 2;
+			grid-row: 2 / 5;
+		}
+
+		&--green-border-left { 
+			@include mq(768px) {
+				grid-column: 1;
+			}
 		}
 	}
 }
