--- a/scss/sections/aboutme/_languages.scss
+++ b/scss/sections/aboutme/_languages.scss
@@ -4,4 +4,32 @@
 	@include mq(576px) {
 		width: 40rem;
 	}
+
+	@include mq(768px) {
+		width: 100%;
+	}
+
+	.description {
+		&--green {
+			margin-bottom: 1.5rem;
+
+			@include mq(576px) {
+				margin-bottom: 2rem;
+			}
+
+			@include mq(768px) {
+				font-size: 3rem;
+				margin-bottom: 3.5rem;
+			}
+		}
+	}
+
+	@include mq(768px) {
+		width: 100%;
+
+		.gray-box {
+			padding-bottom: 4rem;
+			padding-top: 3rem;
+		}
+	}
 }
