--- a/scss/sections/aboutme/_skills.scss
+++ b/scss/sections/aboutme/_skills.scss
@@ -12,6 +12,20 @@
 			@include mq(576px) {
 				margin-bottom: 2rem;
 			}
+
+			@include mq(768px) {
+				font-size: 3rem;
+				margin-bottom: 3.5rem;
+			}
+		}
+	}
+
+	@include mq(768px) {
+		width: 100%;
+
+		.gray-box {
+			padding-bottom: 4rem;
+			padding-top: 3rem;
 		}
 	}
 }
