--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -33,8 +33,11 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	padding: 2rem 2rem 0;
-
+	
 	@include mq(768px) {
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
 		padding: 2rem 5rem 0;
 	}
 }
