--- a/scss/sections/portfolio/_header.scss
+++ b/scss/sections/portfolio/_header.scss
@@ -7,6 +7,11 @@
     padding-top: 7rem;
     width: 100%;
 
+    @include mq(768px) {
+      align-items: flex-start;
+      padding: 13rem 5rem 0;
+    }
+
     &__title {
       color: var(--secondary-clr);
       font-size: 4rem;
@@ -17,6 +22,10 @@
       @include mq(576px) {
         font-size: 7rem;
       }
+
+      @include mq(768px) {
+        font-size: 10rem;
+      }
     }
 
     &__subtitle {
@@ -24,11 +33,18 @@
       font-weight: normal;
       line-height: 1.5;
       margin: 1rem 0 0 0;
+      margin: 1rem 0 0 0;
       text-align: center;
 
       @include mq(576px) {
         font-size: 2.4rem;
         width: 34rem;
+      }
+
+      @include mq(768px) {
+        font-size: 3.2rem;
+        margin: 1rem 0 5rem 0;
+        width: 100%;
       }
     }
 }
