--- a/css/main.css
+++ b/css/main.css
@@ -852,6 +852,12 @@ body {
       flex-direction: row;
       flex-wrap: wrap;
       padding: 5rem; } }
+  @media screen and (min-width: 992px) {
+    .header-aboutme {
+      display: grid;
+      grid-template-columns: min-content 1fr;
+      grid-template-rows: repeat(3, min-content);
+      grid-gap: 2rem 5rem; } }
   .header-aboutme__title {
     color: var(--secondary-clr);
     font-size: 4rem;
@@ -865,6 +871,10 @@ body {
       .header-aboutme__title {
         font-size: 10rem;
         width: 100%; } }
+    @media screen and (min-width: 992px) {
+      .header-aboutme__title {
+        grid-column: 1 / -1;
+        grid-row: 1; } }
   .header-aboutme__subtitle {
     font-size: 1.8rem;
     font-weight: normal;
@@ -876,6 +886,11 @@ body {
       .header-aboutme__subtitle {
         font-size: 3.2rem;
         width: 100%; } }
+    @media screen and (min-width: 992px) {
+      .header-aboutme__subtitle {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        margin: 0; } }
   .header-aboutme__my-photo {
     border: 0.5rem solid var(--secondary-clr);
     border-radius: 50%;
@@ -899,6 +914,11 @@ body {
         height: 22rem;
         width: 22rem;
         margin: 4rem 0; } }
+    @media screen and (min-width: 992px) {
+      .header-aboutme__my-photo {
+        grid-column: 1 / 2;
+        grid-row: 3;
+        margin: 2rem 0 0 0; } }
   .header-aboutme__description {
     font-size: 1.6rem;
     line-height: 2.5rem;
@@ -916,123 +936,14 @@ body {
         margin: 4rem 0 0 5rem;
         text-align: left;
         max-width: 38.5rem; } }
+    @media screen and (min-width: 992px) {
+      .header-aboutme__description {
+        grid-column: 2 / 3;
+        grid-row: 3;
+        margin: 2rem 0 0 0;
+        max-width: 100%;
+        width: 100%; } }
 
-.arrows {
-  margin: 0 auto;
-  height: 5rem;
-  width: 5rem; }
-  .arrows.hide {
-    display: none; }
-  .arrows__arrow:nth-child(1) {
-    animation-name: arrowMove;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-    bottom: 2rem;
-    border-top: 2.5rem solid var(--secondary-clr);
-    border-left: 2.5rem solid transparent;
-    border-right: 2.5rem solid transparent;
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%); }
-    @media screen and (min-width: 576px) {
-      .arrows__arrow:nth-child(1) {
-        border-top: 5rem solid var(--secondary-clr);
-        border-left: 5rem solid transparent;
-        border-right: 5rem solid transparent; } }
-  .arrows__arrow:nth-child(2) {
-    animation-name: arrowMove;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-    bottom: 1.5rem;
-    border-top: 2rem solid var(--secondary-clr);
-    border-left: 2rem solid transparent;
-    border-right: 2rem solid transparent;
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%); }
-    @media screen and (min-width: 576px) {
-      .arrows__arrow:nth-child(2) {
-        border-top: 4rem solid var(--secondary-clr);
-        border-left: 4rem solid transparent;
-        border-right: 4rem solid transparent; } }
-  .arrows__arrow:nth-child(3) {
-    animation-name: arrowMove;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-    bottom: 1rem;
-    border-top: 1.5rem solid var(--secondary-clr);
-    border-left: 1.5rem solid transparent;
-    border-right: 1.5rem solid transparent;
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%); }
-    @media screen and (min-width: 576px) {
-      .arrows__arrow:nth-child(3) {
-        border-top: 3rem solid var(--secondary-clr);
-        border-left: 3rem solid transparent;
-        border-right: 3rem solid transparent; } }
-
-@supports (clip-path: polygon(0 0, 100% 0, 50% 100%)) {
-  .arrows {
-    margin: 0 auto;
-    height: 5rem;
-    width: 5rem; }
-    .arrows.hide {
-      display: none; }
-    .arrows__arrow:nth-child(1) {
-      animation-name: arrowMove;
-      animation-duration: 1s;
-      animation-iteration-count: infinite;
-      animation-direction: alternate-reverse;
-      background-color: var(--secondary-clr);
-      bottom: 2rem;
-      clip-path: polygon(0 0, 100% 0, 50% 100%);
-      height: 2.5rem;
-      left: 50%;
-      position: absolute;
-      transform: translateX(-50%);
-      width: 5rem; }
-      @media screen and (min-width: 576px) {
-        .arrows__arrow:nth-child(1) {
-          height: 5rem;
-          width: 10rem; } }
-    .arrows__arrow:nth-child(2) {
-      animation-name: arrowMove;
-      animation-duration: 1s;
-      animation-iteration-count: infinite;
-      animation-direction: alternate-reverse;
-      background-color: var(--secondary-clr);
-      bottom: 1.5rem;
-      clip-path: polygon(0 0, 100% 0, 50% 100%);
-      height: 2rem;
-      left: 50%;
-      position: absolute;
-      transform: translateX(-50%);
-      width: 4rem; }
-      @media screen and (min-width: 576px) {
-        .arrows__arrow:nth-child(2) {
-          height: 4rem;
-          width: 8rem; } }
-    .arrows__arrow:nth-child(3) {
-      animation-name: arrowMove;
-      animation-duration: 1s;
-      animation-iteration-count: infinite;
-      animation-direction: alternate-reverse;
-      background-color: var(--secondary-clr);
-      bottom: 1rem;
-      clip-path: polygon(0 0, 100% 0, 50% 100%);
-      height: 1.5rem;
-      left: 50%;
-      position: absolute;
-      transform: translateX(-50%);
-      width: 3rem; }
-      @media screen and (min-width: 576px) {
-        .arrows__arrow:nth-child(3) {
-          height: 3rem;
-          width: 6rem; } } }
 @keyframes arrowMove {
   0% {
     transform: translate(-50%, -30%); }
