--- a/scss/sections/aboutme/_header.scss
+++ b/scss/sections/aboutme/_header.scss
@@ -6,13 +6,20 @@
 	height: 100vh;
 	justify-content: center;
 	width: 100%;
-	
+
 	@include mq(768px) {
 		align-content: flex-start;
 		align-items: flex-start;
 		flex-direction: row;
 		flex-wrap: wrap;
 		padding: 5rem;
+	}
+
+	@include mq(992px) {
+		display: grid;
+		grid-template-columns: min-content 1fr;
+		grid-template-rows: repeat(3, min-content);
+		grid-gap: 2rem 5rem;
 	}
 
 	&__title {
@@ -30,6 +37,11 @@
 			font-size: 10rem;
 			width: 100%;
 		}
+
+		@include mq(992px) {
+			grid-column: 1 / -1;
+			grid-row: 1;
+		}
 	}
 
 	&__subtitle {
@@ -45,6 +57,12 @@
 			font-size: 3.2rem;
 			width: 100%;
 		}
+
+		@include mq(992px) {
+			grid-column: 1 / -1;
+			grid-row: 2;
+			margin: 0;
+		}
 	}
 
 	&__my-photo {
@@ -59,6 +77,12 @@
 		@include mq(768px) {
 			@include myphoto(22rem);
 			margin: 4rem 0;
+		}
+
+		@include mq(992px) {
+			grid-column: 1 / 2;
+			grid-row: 3;
+			margin: 2rem 0 0 0;
 		}
 	}
 
@@ -81,147 +105,13 @@
 			text-align: left;
 			max-width: 38.5rem;
 		}
-	}
-}
 
-.arrows {
-	margin: 0 auto;
-	height: 5rem;
-	width: 5rem;
-
-	&.hide {
-		display: none;
-	}
-
-	&__arrow:nth-child(1) {
-		animation-name: arrowMove;
-		animation-duration: 1s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate-reverse;
-		bottom: 2rem;
-		border-top: 2.5rem solid var(--secondary-clr);
-		border-left: 2.5rem solid transparent;
-		border-right: 2.5rem solid transparent;
-		left: 50%;
-		position: absolute;
-		transform: translateX(-50%);
-
-		@include mq(576px) {
-			border-top: 5rem solid var(--secondary-clr);
-			border-left: 5rem solid transparent;
-			border-right: 5rem solid transparent;
-		}
-	}
-
-	&__arrow:nth-child(2) {
-		animation-name: arrowMove;
-		animation-duration: 1s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate-reverse;
-		bottom: 1.5rem;
-		border-top: 2rem solid var(--secondary-clr);
-		border-left: 2rem solid transparent;
-		border-right: 2rem solid transparent;
-		left: 50%;
-		position: absolute;
-		transform: translateX(-50%);
-
-		@include mq(576px) {
-			border-top: 4rem solid var(--secondary-clr);
-			border-left: 4rem solid transparent;
-			border-right: 4rem solid transparent;
-		}
-	}
-
-	&__arrow:nth-child(3) {
-		animation-name: arrowMove;
-		animation-duration: 1s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate-reverse;
-		bottom: 1rem;
-		border-top: 1.5rem solid var(--secondary-clr);
-		border-left: 1.5rem solid transparent;
-		border-right: 1.5rem solid transparent;
-		left: 50%;
-		position: absolute;
-		transform: translateX(-50%);
-
-		@include mq(576px) {
-			border-top: 3rem solid var(--secondary-clr);
-			border-left: 3rem solid transparent;
-			border-right: 3rem solid transparent;
-		}
-	}
-}
-
-@supports (clip-path: polygon(0 0, 100% 0, 50% 100%)) {
-	.arrows {
-		margin: 0 auto;
-		height: 5rem;
-		width: 5rem;
-
-		&.hide {
-			display: none;
-		}
-
-		&__arrow:nth-child(1) {
-			animation-name: arrowMove;
-			animation-duration: 1s;
-			animation-iteration-count: infinite;
-			animation-direction: alternate-reverse;
-			background-color: var(--secondary-clr);
-			bottom: 2rem;
-			clip-path: polygon(0 0, 100% 0, 50% 100%);
-			height: 2.5rem;
-			left: 50%;
-			position: absolute;
-			transform: translateX(-50%);
-			width: 5rem;
-
-			@include mq(576px) {
-				height: 5rem;
-				width: 10rem;
-			}
-		}
-
-		&__arrow:nth-child(2) {
-			animation-name: arrowMove;
-			animation-duration: 1s;
-			animation-iteration-count: infinite;
-			animation-direction: alternate-reverse;
-			background-color: var(--secondary-clr);
-			bottom: 1.5rem;
-			clip-path: polygon(0 0, 100% 0, 50% 100%);
-			height: 2rem;
-			left: 50%;
-			position: absolute;
-			transform: translateX(-50%);
-			width: 4rem;
-
-			@include mq(576px) {
-				height: 4rem;
-				width: 8rem;
-			}
-		}
-
-		&__arrow:nth-child(3) {
-			animation-name: arrowMove;
-			animation-duration: 1s;
-			animation-iteration-count: infinite;
-			animation-direction: alternate-reverse;
-			background-color: var(--secondary-clr);
-			bottom: 1rem;
-			clip-path: polygon(0 0, 100% 0, 50% 100%);
-			height: 1.5rem;
-			left: 50%;
-			position: absolute;
-			transform: translateX(-50%);
-			width: 3rem;
-
-			@include mq(576px) {
-				height: 3rem;
-				width: 6rem;
-			}
+		@include mq(992px) {
+			grid-column: 2 / 3;
+			grid-row: 3;
+			margin: 2rem 0 0 0;
+			max-width: 100%;
+			width: 100%;
 		}
 	}
 }
