--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,9 +15,9 @@
 @import 'sections/aboutme/skills';
 @import 'sections/aboutme/courses';
 @import 'sections/aboutme/languages';
-@import 'sections/aboutme/footer';
 
 @import 'sections/portfolio/header';
+@import 'sections/portfolio/portfolio-container';
 @import 'sections/portfolio/green-box';
 
 @import 'sections/contact/header';
