--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -26,7 +26,7 @@ body {
 	}
 }
 
-.container-aboutme-portfolio {
+.aboutme-container {
 	align-items: center;
 	background-color: var(--background-clr);
 	display: flex;
