--- a/scss/sections/portfolio/_header.scss
+++ b/scss/sections/portfolio/_header.scss
@@ -12,6 +12,11 @@
       padding: 13rem 5rem 0;
     }
 
+    @include mq(992px) {
+      align-items: flex-start;
+      padding: 7rem 5rem 0;
+    }
+
     &__title {
       color: var(--secondary-clr);
       font-size: 4rem;
@@ -44,7 +49,12 @@
       @include mq(768px) {
         font-size: 3.2rem;
         margin: 1rem 0 5rem 0;
+        text-align: left;
         width: 100%;
+      }
+
+      @include mq(992px) {
+        margin: 1rem 0 3rem 0;
       }
     }
 }
