--- a/css/main.css
+++ b/css/main.css
@@ -1164,6 +1164,10 @@ body {
       grid-row-gap: 5rem;
       justify-content: space-evenly;
       padding: 2rem 5rem 3rem; } }
+  @media screen and (min-width: 992px) {
+    .portfolio-container {
+      grid-column-gap: 4%;
+      grid-template-columns: repeat(2, 42rem); } }
 
 .green-box {
   align-items: center;
@@ -1187,6 +1191,11 @@ body {
       height: 32.5rem;
       padding: 1.5rem;
       width: 32.5rem; } }
+  @media screen and (min-width: 992px) {
+    .green-box {
+      height: 42rem;
+      padding: 2rem;
+      width: 42rem; } }
   .green-box:first-child {
     margin-top: 1rem; }
     @media screen and (min-width: 576px) {
@@ -1223,6 +1232,10 @@ body {
       .green-box__example-img {
         max-height: 10rem;
         max-width: 25rem; } }
+    @media screen and (min-width: 992px) {
+      .green-box__example-img {
+        max-height: 14.5rem;
+        max-width: 36.5rem; } }
   .green-box__title {
     color: var(--secondary-clr);
     font-size: 2rem;
@@ -1234,6 +1247,9 @@ body {
     @media screen and (min-width: 768px) {
       .green-box__title {
         font-size: 2.2rem; } }
+    @media screen and (min-width: 992px) {
+      .green-box__title {
+        font-size: 3rem; } }
   .green-box__text {
     font-size: 1.6rem;
     line-height: 2rem;
@@ -1247,6 +1263,10 @@ body {
       .green-box__text {
         font-size: 1.8rem;
         line-height: 2.4rem; } }
+    @media screen and (min-width: 992px) {
+      .green-box__text {
+        font-size: 2.2rem;
+        line-height: 2.8rem; } }
   .green-box:hover {
     box-shadow: 0 0 2rem 0 #41ff14;
     background-color: #222; }
