Add responsive styles for >1200px (header, start page)

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -94,8 +94,10 @@
 			transition: transform 0.3s ease-in-out;
 
 			@include mq(768px) {
+				margin: 0 auto;
 				transform: translateX(-100%);
 				text-align: center;
+				width: 80%;
 			}
 
 			&.show {
