--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,16 @@ body {
   margin: 0;
   overflow-x: hidden;
   padding: 0; }
+  @media screen and (min-width: 1200px) {
+    body::after {
+      background-color: rgba(51, 51, 51, 0.95);
+      content: '';
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: -1; } }
 
 .container {
   align-items: center;
@@ -340,6 +350,12 @@ body {
   @media screen and (min-width: 768px) {
     .container {
       padding: 5rem; } }
+  @media screen and (min-width: 1200px) {
+    .container {
+      background-color: transparent;
+      margin: 0 auto;
+      max-width: 120rem;
+      padding: 5rem 19rem; } }
 
 .aboutme-container {
   align-items: center;
@@ -695,8 +711,10 @@ body {
       transition: transform 0.3s ease-in-out; }
       @media screen and (min-width: 768px) {
         .menu__header .header__my-name {
+          margin: 0 auto;
           transform: translateX(-100%);
-          text-align: center; } }
+          text-align: center;
+          width: 80%; } }
       .menu__header .header__my-name.show {
         transform: translateY(0); }
         @media screen and (min-width: 768px) {
@@ -784,6 +802,13 @@ body {
         height: 15rem;
         width: 15rem;
         margin: 0; } }
+    @media screen and (min-width: 1200px) {
+      .header__my-photo {
+        border: 0.5rem solid var(--secondary-clr);
+        border-radius: 50%;
+        display: block;
+        height: 20rem;
+        width: 20rem; } }
   .header__my-name {
     color: var(--primary-clr);
     font-size: 4rem;
@@ -795,13 +820,15 @@ body {
       .header__my-name {
         font-size: 7rem;
         width: 37rem; } }
-  @media screen and (min-width: 576px) and (min-width: 768px) {
-    .header__my-name {
-      font-size: 5.5rem;
-      margin: 1.5rem 0 3rem;
-      text-align: left;
-      width: 100%; } }
-
+    @media screen and (min-width: 768px) {
+      .header__my-name {
+        font-size: 5.5rem;
+        margin: 1.5rem 0 3rem;
+        text-align: left;
+        width: 100%; } }
+    @media screen and (min-width: 1200px) {
+      .header__my-name {
+        font-size: 8rem; } }
     .header__my-name--green {
       color: var(--secondary-clr);
       display: block; }
@@ -827,6 +854,10 @@ body {
     @media screen and (min-width: 992px) {
       .header .professions {
         max-width: 67rem; } }
+    @media screen and (min-width: 1200px) {
+      .header .professions {
+        padding: 2rem 2rem;
+        max-width: 100%; } }
     .header .professions__profession {
       font-size: 1.8rem;
       font-weight: normal;
@@ -840,6 +871,9 @@ body {
         .header .professions__profession {
           font-size: 2.2rem;
           margin-bottom: 0; } }
+      @media screen and (min-width: 1200px) {
+        .header .professions__profession {
+          font-size: 2.8rem; } }
       .header .professions__profession--green {
         color: var(--secondary-clr);
         font-size: 1.8rem;
@@ -852,6 +886,9 @@ body {
         @media screen and (min-width: 768px) {
           .header .professions__profession--green {
             font-size: 2.2rem; } }
+        @media screen and (min-width: 1200px) {
+          .header .professions__profession--green {
+            font-size: 2.8rem; } }
   .header .header-icons {
     display: flex;
     justify-content: space-between;
