--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -11,6 +11,19 @@ body {
 	margin: 0;
 	overflow-x: hidden;
 	padding: 0;
+
+	@include mq(1200px) {
+		&::after {
+			background-color: rgba(51, 51, 51, 0.95);
+			content: '';
+			height: 100%;
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+			z-index: -1;
+		}
+	}
 }
 
 .container {
@@ -23,6 +36,13 @@ body {
 
 	@include mq(768px) {
 		padding: 5rem;
+	}
+
+	@include mq(1200px) {
+		background-color: transparent;
+		margin: 0 auto;
+		max-width: 120rem;
+		padding: 5rem 19rem;
 	}
 }
 
